# warden-shadow-scanner

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
docs/: SEQUENCES.md
src/: detector.rs
src/output/: mod.rs
src/sources/: github.rs  local.rs  mod.rs  slack.rs
